add property for new label on add product form - product manual

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,3 +7,4 @@ addProduct.form.productCategory.label = Category
 addProduct.form.productCondition.label = Condition
 addProduct.form.unitsInStock.label = Units in stock
 addProduct.form.productImage.label = Product image
+addProduct.form.productManual.label = Product manual
